--- a/TextData/SeasonData.json
+++ b/TextData/SeasonData.json
@@ -1902,5 +1902,13 @@
     "PrizeCar": "Bugatti_W16MistralReward_2023",
     "MilestoneCar": "Bugatti_W16MistralRewardRecycled_2023",
     "PrestigeCar": "McLaren_ElvaWindscreenRewardRecycled_2021"
+  },
+  {
+    "Type": 4,
+    "CodeSeason": "",
+    "KnownSeason": "",
+    "PrizeCar": "",
+    "MilestoneCar": "",
+    "PrestigeCar": ""
   }
 ]
