--- a/TextData/SeasonData.json
+++ b/TextData/SeasonData.json
@@ -1905,10 +1905,10 @@
   },
   {
     "Type": 4,
-    "CodeSeason": "",
-    "KnownSeason": "",
+    "CodeSeason": 239,
+    "KnownSeason": 231,
     "PrizeCar": "",
-    "MilestoneCar": "",
+    "MilestoneCar": "AstonMartin_V12VantageRRewardRecycled_2023",
     "PrestigeCar": ""
   }
 ]
