--- a/TextData/SeasonData.json
+++ b/TextData/SeasonData.json
@@ -1908,7 +1908,7 @@
     "CodeSeason": 239,
     "KnownSeason": 231,
     "PrizeCar": "",
-    "MilestoneCar": "",
+    "MilestoneCar": "AstonMartin_V12VantageRRewardRecycled_2023",
     "PrestigeCar": ""
   }
 ]
