--- a/TextData/SeasonData.json
+++ b/TextData/SeasonData.json
@@ -1907,8 +1907,8 @@
     "Type": 4,
     "CodeSeason": 239,
     "KnownSeason": 231,
-    "PrizeCar": "",
+    "PrizeCar": "AstonMartin_V12VantageRReward_2023",
     "MilestoneCar": "AstonMartin_V12VantageRRewardRecycled_2023",
-    "PrestigeCar": ""
+    "PrestigeCar": "Chevrolet_CamaroZ28ASC_2015"
   }
 ]
