--- a/Libraries/NmgSvcs/OldCarsInThisAppVersionList.json
+++ b/Libraries/NmgSvcs/OldCarsInThisAppVersionList.json
@@ -1,2 +1,2 @@
 
-{"NewCarsInThisAppVersionList":{"CarDBKeys":["AstonMartin_Vantage_2024","AstonMartin_Valiant_2025","Acura_IntegraTypeRDB8F1_1995","Porsche_911Targa4GTSReward_2025","Porsche_911Targa4GTSRewardRecycled_2025","Shelby_SuperSnakeS650Reward_2024","Shelby_SuperSnakeS650RewardRecycled_2024","Lamborghini_HuracanEVOTNR_2021"]}}
+{"NewCarsInThisAppVersionList":{"CarDBKeys":["Bugatti_W16MistralReward_2023","Bugatti_W16MistralRewardRecycled_2023","Chevrolet_CorvetteC8ZR1_2024","Ford_EscortRSCosworthCossieV2_1994","Porsche_911GT3RRennsport_2023","Porsche_917K_1970","Porsche_963LMDh_2023","Radford_Type62PikesPeak_2023"]}}
