--- a/release-history.json
+++ b/release-history.json
@@ -2,7 +2,7 @@
 	{
         "version": "1.0.1",
         "info": "- fix memory leaks\n- other minor changes",
-        "action": "https://drive.google.com/file/d/1lkjFOI5Imv70AmYZ237SDP9rzhFijfvY/view?usp=sharing",
+        "action": "https://qrco.de/bfvwKD",
 		"date": "23/04/25"
     },
 	{
