--- a/Libraries/NmgSvcs/OldCarsInThisAppVersionList.json
+++ b/Libraries/NmgSvcs/OldCarsInThisAppVersionList.json
@@ -1,2 +1,2 @@
 
-{"NewCarsInThisAppVersionList":{"CarDBKeys":["AstonMartin_V12VantageRReward_2023","AstonMartin_V12VantageRRewardRecycled_2023","Dodge_ChargerDaytonaScatPack_2025","Mitsubishi_EclipseSpyderF2_2003","Porsche_911GT39922_2025","Porsche_962C_1987"]}}
+{"NewCarsInThisAppVersionList":{"CarDBKeys":["Bugatti_W16MistralReward_2023","Bugatti_W16MistralRewardRecycled_2023","Chevrolet_CorvetteC8ZR1_2024","Ford_EscortRSCosworthCossieV2_1994","Porsche_911GT3RRennsport_2023","Porsche_917K_1970","Porsche_963LMDh_2023","Radford_Type62PikesPeak_2023"]}}
