--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,8 @@
 Localisation/** export-ignore
 README.md export-ignore
 Privacy.policy export-ignore
+CVD_PRE/** export-ignore
+Gacha_PRE/** export-ignore
+Icons_PRE/** export-ignore
+Libraries_PRE/** export-ignore
+Snapshots_PRE/** export-ignore
