--- a/ScreenLoading/SL_Config.json
+++ b/ScreenLoading/SL_Config.json
@@ -221,5 +221,25 @@
         "art_id": 54,
         "art_y_offset": 0,
         "mus_id": 0
+    },
+	{
+        "art_id": 55,
+        "art_y_offset": -20,
+        "mus_id": 0
+    },
+	{
+        "art_id": 56,
+        "art_y_offset": 15,
+        "mus_id": 0
+    },
+	{
+        "art_id": 57,
+        "art_y_offset": -25,
+        "mus_id": 3
+    },
+	{
+        "art_id": 58,
+        "art_y_offset": -40,
+        "mus_id": 3
     }
 ]
