--- a/TextData/SeasonData.json
+++ b/TextData/SeasonData.json
@@ -37,7 +37,7 @@
     "KnownSeason": "5 Alpha",
     "PrizeCar": "MercedesBenz_A45AMG_2014",
     "MilestoneCar": "-",
-    "PrestigeCar": "?"
+    "PrestigeCar": "-"
   },
   {
     "Type": 0,
@@ -45,7 +45,7 @@
     "KnownSeason": "1 Beta",
     "PrizeCar": "Bentley_ContinentalGT3RReward_2015",
     "MilestoneCar": "-",
-    "PrestigeCar": "?"
+    "PrestigeCar": "-"
   },
   {
     "Type": 0,
