--- a/release-history.json
+++ b/release-history.json
@@ -1,8 +1,14 @@
 [   
+    {
+        "version": "1.2.0",
+        "info": "- DONATE: enabled and top-donates added\n- NEW SECTION: SEASONS\n- NEW SECTION: PROFILE STYLE\n- WR: added driver profiles\n- AUTOSHOW: added direct link share\n- fix errors and optimization\n- other minor changes",
+        "action": "https://drive.google.com/file/d/18PRkGJrubMG-GF011YJO-ekXaKPBD9ff/view?usp=sharing",
+		"date": "14/10/25"
+    },
 	{
         "version": "1.1.5",
         "info": "- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization\n- other minor changes",
-        "action": "https://drive.google.com/file/d/18PRkGJrubMG-GF011YJO-ekXaKPBD9ff/view?usp=sharing",
+        "action": "NONE",
 		"date": "12/09/25"
     },
 	{
