--- a/Libraries_PRE/NmgSvcs/OldCarsInThisAppVersionList.json
+++ b/Libraries_PRE/NmgSvcs/OldCarsInThisAppVersionList.json
@@ -1,2 +1,2 @@
 
-{"NewCarsInThisAppVersionList":{"CarDBKeys":["Chevrolet_BlazinRodsChevelle_1970","Chevrolet_GarretCamaro_1972","Ferrari_12CilindriSpiderReward_2024","Ferrari_12CilindriSpiderRewardRecycled_2024","Honda_CivicEJ1F1_1993","Plymouth_FuryJimBelvedere_1958"]}}
+{"NewCarsInThisAppVersionList":{"CarDBKeys":["Buick_RingbrothersGNX_1987","Chevrolet_AmericanLegendsChevelle_1966","Chevrolet_DuSoldDesignCamaro_1967","Chevrolet_WeaverCamaro_1969","Plymouth_RingbrothersCuda_1970","Porsche_935Gold_2019","Lamborghini_LBWKMurcielagoReward_2009","Lamborghini_LBWKMurcielagoRewardRecycled_2009","Toyota_GRYarisReward_2021","Toyota_GRYarisRewardRecycled_2021","Datsun_240ZLPClassic_1972"]}}
